# RedHook2

./: .gitmodules  CMakeLists.txt
source/core/: core.cpp  core.hpp
source/hooking/: detour-hook.hpp
source/scripting/: script.hpp
